# restq

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  Changelog.md  LICENSE  README.md  TODO.md  test.sh
.github/workflows/: rust.yml
crates/restq-http/: .gitignore  Cargo.toml
crates/restq-http/src/: lib.rs
src/: ast.rs  csv_data.rs  csv_rows.rs  data_type.rs  data_value.rs  lib.rs  multi_stmt.rs  parser.rs  plain_data.rs  stmt_data.rs
src/ast/: ddl.rs  dml.rs  expr.rs  operator.rs  parser.rs  table.rs  value.rs
src/ast/ddl/: ddl_parser.rs
src/ast/dml/: dml_parser.rs
src/ast/parser/: tests.rs  utils.rs
src/csv_data/: parser.rs
src/parser/: tests.rs  utils.rs
src/stmt_data/: parser.rs
tests/: left_join.rs  select.rs  table_def.rs
