[package]
name = "restq"
version = "0.3.2"
authors = [ "Jovansonlee Cesar<ivanceras@gmail.com>" ]
license = "MIT"
description = "Compacting SQL query into a URL suitable for rest api calls"
readme = "README.md"
repository = "https://github.com/ivanceras/restq"
documentation = "https://docs.rs/restq"
edition = "2018"
keywords = ["url", "param", "parser", "rest", "sql"]

[dependencies]
pom = { version = "3.1.0" }
url = "2.1.0"
chrono = "0.4.10"
uuid = "0.8.1"
lazy_static = "1.4.0"
sql-ast = { version = "0.7.1"}
thiserror = "1.0.9"
csv = "1.1.1"
log = "0.4.8"


[workspace]
members = [
    "crates/restq-http",
]

#[patch.crates-io]
#sql-ast = { path = "../sql-ast" }
