[package]
name = "restq"
version = "0.4.0"
authors = [ "Jovansonlee Cesar<ivanceras@gmail.com>" ]
license = "MIT"
description = "Compacting SQL query into a URL suitable for rest api calls"
readme = "README.md"
repository = "https://github.com/ivanceras/restq"
documentation = "https://docs.rs/restq"
edition = "2018"
keywords = ["url", "param", "parser", "rest", "sql"]

[dependencies]
pom = { version = "3.1.0" }
url = "2.1.0"
chrono = "0.4.10"
uuid = { version = "0.8.1", features = ["v4"] }
lazy_static = "1.4.0"
sql-ast = { version = "0.7.1", path = "../sql-ast"}
thiserror = "1.0.9"
csv = "1.1.1"
log = "0.4.8"
base64 = "0.9"
either = "1.6"
serde = { version = "1", features = ["derive"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3" } 


[workspace]
members = [
    "crates/restq-http",
]

#[patch.crates-io]
#sql-ast = { path = "../sql-ast" }
