[package]
name = "restq"
version = "0.5.1"
authors = [ "Jovansonlee Cesar<ivanceras@gmail.com>" ]
license = "MIT"
description = "Compacting SQL query into a URL suitable for rest api calls"
readme = "README.md"
repository = "https://github.com/ivanceras/restq"
documentation = "https://docs.rs/restq"
edition = "2018"
keywords = ["url", "param", "parser", "rest", "sql"]

[dependencies]
pom = { version = "3" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
lazy_static = "1.4"
sql-ast = { version = "0.7"}
thiserror = "1"
csv = "1"
log = "0.4"
base64 = "0.13"
either = "1.6"
serde = { version = "1", features = ["derive"] }


#[target.'cfg(target_arch = "wasm32")'.dependencies]
#js-sys = { version = "0.3" } 


[workspace]
members = [
    "crates/restq-http",
]

#[patch.crates-io]
#sql-ast = { git = "https://github.com/ivanceras/sql-ast.git", branch = "master" }
#sql-ast = { path = "../sql-ast" }


[badges]
maintenance = { status = "passively-maintained" }
