[package]
name = "restq-http"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
readme = "../../README.md"
license = "MIT"
description = "Parse restq syntax from http crate"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.0"
restq = { version = "0.1.0", path = "../../" }
thiserror = "1.0.9"
