[package]
name = "restq-http"
version = "0.5.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
readme = "../../README.md"
license = "MIT"
description = "Parse restq syntax from http crate"
repository = "https://github.com/ivanceras/restq"
documentation = "https://docs.rs/restq"
keywords = ["http", "request","query", "sql"]


[dependencies]
http = "0.2.0"
restq = { version = "0.5.0", path = "../../" }
thiserror = "1.0.9"
percent-encoding = "2"
